@@ -35,6 +35,9 @@ Release 1.16.2 [PENDING]
   * Improvement: in forms, <input type="image"> should be excluded from formData() (and hence from form submissions).
     <https://github.com/jhy/jsoup/pull/2010>
 
+  * Improvement: in Safelist, made isSafeTag and isSafeAttribute public methods, for extensibility.
+    <https://github.com/jhy/jsoup/issues/1780>
+
   * Bugfix: `form` elements and empty elements (such as `img`) did not have their attributes de-duplicated.
     <https://github.com/jhy/jsoup/pull/1950>
 
